--- a/config/config.env
+++ b/config/config.env
@@ -1,3 +1,3 @@
 NODE_ENV=production
 PORT=5000
-MONGO_URL=mongodb+srv://Aumaumone2009:Aum0879862267@testdb-znemn.mongodb.net/expenetracker?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://<MYUSER>:<MYPASSWORD>@testdb-znemn.mongodb.net/expenetracker?retryWrites=true&w=majority
